Fix text and logo alignment

--- a/assets/css/success.css
+++ b/assets/css/success.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
+	line-height: 1;
 }
 
 .wc-payment-gateway-method-name-woopay-wrapper img {
